--- a/README
+++ b/README
@@ -2,4 +2,5 @@ geometry.js
 JavaScript library for working with objects in a two-dimensional coordinate system.
 
 MIT-Style License
-Johan Nordberg <its@johan-nordberg.com>
+2011 Johan Nordberg <its@johan-nordberg.com>
+2013 Jordon Biondo <biondoj@mail.gvsu.edu>
